商品詳細画面の作成

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,7 +130,7 @@
     <% @items.each do |item| %>
       
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
@@ -155,7 +155,6 @@
         </div>
         <% end %>
       </li>
-      
     <% end %>
 
       
@@ -180,7 +179,7 @@
       <% end %>
     </ul>
   </div>
-  
+
   <%# /商品一覧 %>
 </div>
 <%= link_to( new_item_path, class: 'purchase-btn') do %>
