クレジット決済機能の導入

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -30,10 +30,11 @@
       </p>
     </div>
     <%# /支払額の表示 %>
-
+    <%= include_gon %>
     <%= form_with model: @order_address, url: item_orders_path(@item), id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
-    <%# カード情報の入力 %>
-    <%# <div class='credit-card-form'>
+    <%= render 'shared/error_messages', model: f.object %>
+    <% #カード情報の入力 %>
+     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
         クレジットカード情報入力
       </h1>
@@ -45,13 +46,13 @@
         <div id="number-form" class="input-default"></div>
         <div class='available-card'>
           <%= image_tag 'card-visa.gif', class: 'card-logo'%>
-         <%# <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
-         <%# <%= image_tag 'card-jcb.gif', class: 'card-logo'%>
-        <%#  <%= image_tag 'card-amex.gif', class: 'card-logo'%>
-     <%#   </div>
-    <%#  </div>
-     <%# <div class="form-group">
-       <%# <div class='form-text-wrap'>
+          <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
+          <%= image_tag 'card-jcb.gif', class: 'card-logo'%>
+          <%= image_tag 'card-amex.gif', class: 'card-logo'%>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
           <label class="form-text">有効期限</label>
           <span class="indispensable">必須</span>
         </div>
